--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "semver": "5.5.0",
     "socket.io": "2.0.4",
     "spdy": "3.4.7",
+    "sqlite3": "3.1.13",
     "ua-parser-js": "0.7.17",
     "urijs": "1.19.0",
     "uuid": "3.1.0",
